@@ -2,6 +2,9 @@ v6.4
 -----
 + Added a progress bar to the header that indicates if Enhanced Steam is processing requests
 + Increased Early Access detection speed (thanks henryg!)
+: Fixed the number of API requests to conform with Valve's throttling limits
+- Removed ability to hide DLC from unowned games, as it is no longer feasible with new API limits
+- Removed ability to highlight packages, as it is no longer feasible with new API limits
 
 
 v6.3.5
